# gst-rawvideosrc

./: Makefile.am  README  autogen.sh  configure.ac  gstrawvideosrc.c  gstrawvideosrc.h  plugin.c
